--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -10,9 +10,13 @@ $black: #000;
 $white: #FFF;
 $yellow: #D9A01F;
 $light-yellow: #FFF537;
+$border-color: #636366;
 
 
 $fontfamily       : 'Exo 2', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
 
-$wide: 1325px;
+$xsmall: 320px;
+$small: 400px;
+$medium: 768px;
+$large: 1024px;
