--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -1,12 +1,12 @@
 $susy: (
 	columns: 9,
 	gutters: 1/6,
-  debug: (
-    image: hide,
-    color: $purple,
-    output: image,
-    toggle: top right,
-  ),
+  // debug: (
+  //   image: hidden,
+  //   color: $purple,
+  //   output: image,
+  //   toggle: top right,
+  // ),
 );
 // set border boxing global
 @include global-box-sizing(border-box);
@@ -14,108 +14,39 @@ $susy: (
 header, footer {
   @include container(100%);
   background: $black;
+  padding: 0;
+  font-family: $fontfamily;
+  color: $white;
 }
 
-// .cbp-spmenu-vertical {
-//   width: 240px;
-//   height: 100%;
-//   top: 0;
-//   z-index: 1000;
-// }
-
-// .cbp-spmenu-vertical a {
-//   border-bottom: 1px solid #258ecd;
-//   padding: 1em;
-// }
-
-// .cbp-spmenu-left {
-//   left: -240px;
-// }
-
-// .cbp-spmenu-left.cbp-spmenu-open {
-//   left: 0px;
-// }
-
-// .cbp-spmenu-push {
-//   overflow-x: hidden;
-//   position: relative;
-//   left: 0;
-// }
-
-// @media screen and (max-height: 26.375em){
-
-//   .cbp-spmenu-vertical {
-//     font-size: 90%;
-//     width: 190px;
-//   }
-
-//   .cbp-spmenu-left,
-//   .cbp-spmenu-push-toleft {
-//     left: -190px;
-//   }
-
-//   .cbp-spmenu-right {
-//     right: -190px;
-//   }
-
-//   .cbp-spmenu-push-toright {
-//     left: 190px;
-//   }
-// }
-// ///////////////////////////////
+header{
+  h1 {
+    @include span(9);
+    text-transform: uppercase;
+    color: $white;
+    font-size: 1.3em;
+    letter-spacing: 7px;
+    text-align: center;
+    line-height: 2.55em;
+    border-bottom: 1px solid $border-color;
+    img {
+    width: 20px;
+    }
+  }
+}
 
 main {
   @include container(90%);
-}
-
-#top .nav-btn {
-  position: absolute;
-  top: 1.5em;
-  left: 1.875em;
-}
-.nav-btn {
-  display: block;
-  width: 2.625em;
-  height: 2.25em;
-  padding: 0;
-  border: 0;
-  outline: none;
-  background: #333333 url("../img/nav-icon.svg") left center no-repeat;
-  background-size: 1.875em 1.5em;
-  overflow: hidden;
-  white-space: nowrap;
-  text-indent: 100%;
-  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
-  opacity: 0.7;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
-
-a {
-  text-decoration: none;
+  background-color: $white;
+  padding: 1% 0 2% 0;
+  font-family: $fontfamily;
 }
 
 
 
 
-// // general layout header & footer
-// header, footer {
-//   @include container(100%);
-//   padding: 2% 0;
-//   font-family: $fontfamily;
-//   background-color: $black;
-//   color: $white; //doesnt work on its own
-// }
 
-// // general layout main
 
-// main {
-//   @include container(80%);
-//   background-color: $white;
-//   padding: 1% 0 2% 0;
-//   font-family: $fontfamily;
-// }
-
-// //header - main navigation 
 
 // header {
 //   border-bottom: 5px solid $light-yellow;
